@@ -2652,8 +2652,8 @@ instr_p2[] = {
     { "rep",    0x0cd00000, P2_TWO_OPERANDS, OPC_REPEAT, 0 },
   
     { "coginit",0x0ce00000, P2_TWO_OPERANDS, OPC_GENERIC, FLAG_WC },
-    { "qmul",   0x0d000000, P2_TWO_OPERANDS, OPC_GENERIC, 0 },
-    { "qdiv",   0x0d100000, P2_TWO_OPERANDS, OPC_GENERIC, 0 },
+    { "qmul",   0x0d000000, P2_TWO_OPERANDS, OPC_QMUL, 0 },
+    { "qdiv",   0x0d100000, P2_TWO_OPERANDS, OPC_QDIV, 0 },
     { "qfrac",  0x0d200000, P2_TWO_OPERANDS, OPC_QFRAC, 0 },
     { "qsqrt",  0x0d300000, P2_TWO_OPERANDS, OPC_GENERIC, 0 },
     { "qrotate",0x0d400000, P2_TWO_OPERANDS, OPC_GENERIC, 0 },
