@@ -93,7 +93,9 @@ typedef enum IROpcode {
     OPC_MULS,
     OPC_MULU,
     OPC_NOT,
+    OPC_QDIV,
     OPC_QFRAC,
+    OPC_QMUL,
     OPC_SETQ,
     OPC_SETQ2,
     OPC_SIGNX,
